# mitpick

./: .gitignore  CMakeLists.txt  Main.c  README.md  meson.build  win_details.sh
.github/workflows/: cmake.yml
source/: Main.c
