CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(mitpick VERSION 1.0.1 DESCRIPTION "Capture the terminal from the terminal" LANGUAGES C)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})

LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})

ADD_EXECUTABLE(${PROJECT_NAME} source/Main.c)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

INSTALL(FILES source/get_window_details.sh DESTINATION bin)

CONFIGURE_FILE(source/get_window_details.sh ${CMAKE_CURRENT_BINARY_DIR}/get_window_details.sh COPYONLY)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTK_LIBRARIES})
